--- a/package.json
+++ b/package.json
@@ -1,21 +1,73 @@
 {
   "name": "golf-rush-native",
+  "main": "expo-router/entry",
   "version": "1.0.0",
-  "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "test": "jest --watchAll",
+    "lint": "expo lint"
+  },
+  "jest": {
+    "preset": "jest-expo"
   },
   "dependencies": {
-    "expo": "~50.0.14",
-    "expo-status-bar": "~1.11.1",
+    "@expo/vector-icons": "^14.0.0",
+    "@os-team/i18next-react-native-language-detector": "^1.0.33",
+    "@react-native-async-storage/async-storage": "^1.23.1",
+    "@react-native-firebase/app": "^20.0.0",
+    "@react-navigation/drawer": "^6.6.15",
+    "@react-navigation/native": "^6.0.2",
+    "@react-three/drei": "^9.105.4",
+    "@react-three/fiber": "^8.16.2",
+    "axios": "^1.6.8",
+    "eas-cli": "^9.0.7",
+    "expo": "~51.0.1",
+    "expo-constants": "~16.0.1",
+    "expo-font": "~12.0.4",
+    "expo-gl": "~13.6.0",
+    "expo-linear-gradient": "^13.0.2",
+    "expo-linking": "~6.3.1",
+    "expo-router": "~3.5.11",
+    "expo-screen-orientation": "~6.4.1",
+    "expo-splash-screen": "~0.27.4",
+    "expo-status-bar": "~1.12.1",
+    "expo-system-ui": "~3.0.4",
+    "expo-updates": "^0.25.10",
+    "expo-web-browser": "~13.0.3",
+    "firebase": "^10.12.0",
+    "i18next": "^23.11.3",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "nativewind": "^4.0.1",
     "react": "18.2.0",
-    "react-native": "0.73.6"
+    "react-dom": "18.2.0",
+    "react-hook-form": "^7.51.5",
+    "react-i18next": "^14.1.1",
+    "react-native": "0.74.1",
+    "react-native-gesture-handler": "~2.16.1",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~3.10.1",
+    "react-native-safe-area-context": "4.10.1",
+    "react-native-screens": "3.31.1",
+    "react-native-svg": "^15.3.0",
+    "react-native-web": "~0.19.10",
+    "socket.io-client": "^4.7.5",
+    "socket.io-msgpack-parser": "^3.0.2",
+    "three": "^0.163.0",
+    "zustand": "^4.5.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.20.0"
+    "@babel/core": "^7.20.0",
+    "@types/jest": "^29.5.12",
+    "@types/react": "~18.2.45",
+    "@types/react-test-renderer": "^18.0.7",
+    "jest": "^29.2.1",
+    "jest-expo": "~51.0.1",
+    "react-test-renderer": "18.2.0",
+    "tailwindcss": "^3.4.3",
+    "typescript": "~5.3.3"
   },
   "private": true
 }
